[tool.poetry]
name = "repl_python3_psutil"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.8.0"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
pytz = "^2021.3"
elasticsearch = "^7.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
